--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
         >. Coded by
-        <a href="https://github.com/DiegoImperiano">Diego Imperiano</a>.
+        <a href="https://www.linkedin.com/in/diegoimperiano/">Diego Imperiano</a>.
       </div>
     </div>
     <script src="script.js"></script>
