--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p>Bill</p>
           </label>
           <p class="info">
-            <img src="/images/icon-dollar.svg" alt="icon dolar" />
+            <img src="https://github.com/DiegoImperiano/tip-calculator/blob/main/images/icon-dollar.svg" alt="icon dolar" />
             <input
               type="number"
               placeholder="0.00"
