organização dos arquivos e criação do READE.me

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="images/favicon-32x32.png"
     />
 
     <title>Frontend Mentor | Tip calculator app</title>
@@ -28,7 +28,7 @@
   <body>
     <div class="body">
       <h1>
-        <img src="/images/logo.svg" alt="splitter" />
+        <img src="images/logo.svg" alt="splitter" />
       </h1>
 
       <div class="container">
@@ -37,7 +37,7 @@
             <p>Bill</p>
           </label>
           <p class="info">
-            <img src="https://github.com/DiegoImperiano/tip-calculator/blob/main/images/icon-dollar.svg" alt="icon dolar" />
+            <img src="images/icon-dollar.svg" alt="icon dolar" />
             <input
               type="number"
               placeholder="0.00"
@@ -85,7 +85,7 @@
             <p>Number of People</p>
           </label>
           <p class="info">
-            <img src="/images/icon-person.svg" alt="icone person" />
+            <img src="images/icon-person.svg" alt="icone person" />
             <input
               type="number"
               placeholder="0"
